# gen-lsp-types

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: check-metamodel.yml  ci.yml  release.yml  security-static-analysis.yml
src/: generated.rs  json_rpc.rs  lib.rs  main.rs
tests/: fields.rs  structures.rs
xtask/: Cargo.toml  metaModel.json
xtask/src/: derives.rs  main.rs  renderers.rs  with_uri.rs
