[package]
name = "gen-lsp-types"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["from"] }
serde = { workspace = true }
serde_json = { workspace = true }

[workspace]
members = [".", "xtask"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
